bug: encoding issues w json

--- a/.env-example
+++ b/.env-example
@@ -33,8 +33,6 @@ DB_PATH=/data/location_history.db
 
 ################################
 # Sensor Configuration
-# Format: HA_SENSOR_<COLUMN_NAME_UPPERCASE>=<entity_id>
+# Format: Comma-separated list of col_name:entity_id pairs
 ################################
-HA_SENSOR_BATTERY_LEVEL=sensor.example_battery_level
-HA_SENSOR_WIFI_SSID=sensor.example_wifi_connection
-HA_SENSOR_IS_CHARGING=binary_sensor.example_is_charging
+HA_SENSORS="battery_level:sensor.example_battery_level,wifi_ssid:sensor.example_wifi_connection"
